--- a/films.html
+++ b/films.html
@@ -142,17 +142,29 @@
               <div class="arrow-icon">
                 <i class="fas fa-chevron-left"></i>
               </div>
-                <a href="/watch/watch1.html" name="film"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
-                <a href="/watch/watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
-                <a href="/watch/watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
-                <a href="/watch/watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
+                <a href="/watch/watch1.html">
+                  <img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
+                <a href="/watch/watch1.html">
+                  <img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
+                <a href="/watch/watch1.html">
+                  <img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
+                <a href="/watch/watch1.html">
+                  <img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
                   <div class="arrow-icon">
                     <i class="fas fa-chevron-right"></i>
                   </div>           
-                <label for="film" class="label1"><a href="/watch/watch1.html">Film title</a></label>
-                <label for="film" class="label2"><a href="/watch/watch1.html">Film title</a></label>
-                <label for="film" class="label3"><a href="/watch/watch1.html">Film title</a></label>
-                <label for="film" class="label4"><a href="/watch/watch1.html">Film title</a></label>
+                <label for="film" class="label1">
+                  <a href="/watch/watch1.html">Film title</a>
+                </label>
+                <label for="film" class="label2">
+                  <a href="/watch/watch1.html">Film title</a>
+                </label>
+                <label for="film" class="label3">
+                  <a href="/watch/watch1.html">Film title</a>
+                </label>
+                <label for="film" class="label4">
+                  <a href="/watch/watch1.html">Film title</a>
+                </label>
             </div>
           </div>
         </section>
