--- a/Create-account.html
+++ b/Create-account.html
@@ -6,7 +6,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
     <title>SquareEyes | Create an account</title>
-    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
+    <meta name="description" content="Are you a producer or a watcher? Choose which account you want, and start you journey inside the Square Eyes community.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/styles.css" rel="stylesheet">
   </head>
