--- a/create-watcher-account/watcher-creditcard.html
+++ b/create-watcher-account/watcher-creditcard.html
@@ -5,8 +5,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-    <title>SquareEyes | Create an account</title>
-    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
+    <title>SquareEyes | Credit Card</title>
+    <meta name="description" content="Add your creditcard information for faster and easier payment when you find a film.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../styles/styles.css" rel="stylesheet">
   </head>
