--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-    <title>SquareEyes</title>
-    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
+    <title>SquareEyes | Home</title>
+    <meta name="description" content="Square Eyes is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/index.css" rel="stylesheet">
   </head>
