--- a/producers.html
+++ b/producers.html
@@ -17,7 +17,7 @@
     <title>SquareEyes | Producers</title>
     <meta
       name="description"
-      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+      content="Explore our talented independent producers and check out their profile. Are you a independent producer yourself? Join our community!"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles/styles.css" rel="stylesheet" />
