--- a/search-results.html
+++ b/search-results.html
@@ -14,10 +14,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
       rel="stylesheet"
     />
-    <title>SquareEyes | Producers</title>
+    <title>SquareEyes | Search results</title>
     <meta
       name="description"
-      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+      content="Search results for 'Culpa qui officia deserunt'"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles/styles.css" rel="stylesheet" />
