--- a/account-watcher.html
+++ b/account-watcher.html
@@ -14,16 +14,17 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
       rel="stylesheet"
     />
-    <title>SquareEyes | Producers</title>
+    <title>SquareEyes | Account</title>
     <meta
       name="description"
-      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+      content="This is your watcher account. Update your personal or credit card information, or keep watching films."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles/styles.css" rel="stylesheet" />
   </head>
 
   <body>
+   <div class="full-viewport">  
     <header id="header">
       <div class="content-wrap">
         <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
@@ -101,5 +102,6 @@
         </section>
     </div>
   </footer>
+  </div>
  </body>
 </html>
