--- a/film.html
+++ b/film.html
@@ -17,10 +17,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
       rel="stylesheet"
     />
-    <title>SquareEyes | Sign in</title>
+    <title>SquareEyes | Film title</title>
     <meta
       name="description"
-      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+      content="Film title, from producer name, film description"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles/pop-up.css" rel="stylesheet" />
