--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     <title>SquareEyes | Sign in</title>
     <meta
       name="description"
-      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+      content="Sign into your account. Not a member? Join Square Eyes now!"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles/pop-up.css" rel="stylesheet" />
