--- a/search.html
+++ b/search.html
@@ -24,32 +24,49 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles/pop-up.css" rel="stylesheet" />
+    <!-- Hotjar Tracking Code for https://square-eyes.netlify.app/ -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2267122, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
 
   <body>
     <a href="index.html">
-        <div class="back-icon"><i class="fas fa-chevron-left"></i
-    ></div></a>
+      <div class="back-icon"><i class="fas fa-chevron-left"></i></div
+    ></a>
 
     <div class="popup-section">
       <main>
         <section>
           <h1>Search</h1>
-            <form action="submit.php" method="GET" class="form-section">
-              <input
-                type="text"
-                placeholder="Search.."
-                name="search"
-                class="search-input"/>
-                  <button class="search-button">
-                    <a href="search-results.html">
-                      <div class="search-icon">
-                        <i class="fas fa-search"></i>
-                      </div>
-                    </a>
-                  </button>
-            </form>
-            <p>Type in film title, producer, tags or category..</p>
+          <form action="submit.php" method="GET" class="form-section">
+            <input
+              type="text"
+              placeholder="Search.."
+              name="search"
+              class="search-input"
+            />
+            <button class="search-button">
+              <a href="search-results.html">
+                <div class="search-icon">
+                  <i class="fas fa-search"></i>
+                </div>
+              </a>
+            </button>
+          </form>
+          <p>Type in film title, producer, tags or category..</p>
         </section>
       </main>
     </div>
