--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -34,7 +34,7 @@
         </div>
       </a>
       <section class="film-section">
-        <a href="watch2.html">
+        <a>
           <img
             src="../images/film3-big.jpg"
             alt="Film title"
@@ -63,7 +63,7 @@
           hitatibus</p
         >
         <div class="watch-button">
-          <a href="films.html" class="button1">Watch</a>
+          <a class="button1">Watch</a>
         </div>
       </section>
     </main>
