--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </section>
 
-
+    <div class="index-container">
     <section class="index-section2">
       <div class="content-wrap">
         <h2>Film-lover?</h2>
@@ -79,6 +79,7 @@
               </div>
         </div>
       </section>
+    </div>
     </main>
    
     <footer>
