--- a/watch/watch2.html
+++ b/watch/watch2.html
@@ -46,9 +46,13 @@
       <div class="filmCard" id="filmCardPurchase">
       <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
       <div class="filmCardBody">
-        <h3 class="cardTitle">FILM TITLE</h3>
-        <p class="cardProducer">From: Producer name</p>          
-        <p class="cardGenre">Genre: Drama</p>
+        <h3 class="cardTitle">FILM TITLE</h3>       
+        <p class="priceCircle">3$</p>
+        <p class="cardProducer">From: Producer name</p>
+        <div class="filmInfo">
+        <p class="cardGenre">Drama</p>
+        <p class="cardDate">2019</p>
+      </div>
         <p class="cardSummary">Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe
           liatque porepera dolorporum que del et est et que et anis cum nos
           volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem.</p>
