--- a/films.html
+++ b/films.html
@@ -78,6 +78,49 @@
           </div>
         </section>
 
+        <section class="drama-section">
+          <h2 class="films-h2">Drama</h2>
+          <div class="drama">
+            <div class="arrow-icon">
+                <i class="fas fa-chevron-left"></i>
+            </div>  
+          <div class="filmCard" id="filmCardPurchase">
+            <a href="/watch/watch1.html">
+            <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
+              <h3 class="cardTitle">FILM TITLE</h3>       
+              <p class="cardProducer">From: Producer name</p>
+            </a>
+          </div>
+
+          <div class="filmCard" id="filmCardPurchase">
+            <a href="/watch/watch1.html">
+            <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
+              <h3 class="cardTitle">FILM TITLE</h3>       
+              <p class="cardProducer">From: Producer name</p>
+            </a>
+          </div>
+
+          <div class="filmCard" id="filmCardPurchase">
+            <a href="/watch/watch1.html">
+            <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
+              <h3 class="cardTitle">FILM TITLE</h3>       
+              <p class="cardProducer">From: Producer name</p>
+            </a>
+          </div>
+
+          <div class="filmCard" id="filmCardPurchase">
+            <a href="/watch/watch1.html">
+            <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
+              <h3 class="cardTitle">FILM TITLE</h3>       
+              <p class="cardProducer">From: Producer name</p>
+            </a>
+          </div>
+          <div class="arrow-icon">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+          </div>
+        </section>
+
         <section class="drama-section"> 
         <div class="content-wrap">
           <h2 class="films-h2">Drama</h2>
