--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-      rel="stylesheet"
-    />
-    <title>SquareEyes | Sign in</title>
-    <meta
-      name="description"
-      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../styles/styles.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+    <title>SquareEyes | Credit Card</title>
+    <meta name="description" content="Add your creditcard information for faster and easier payment when you find a film.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../styles/styles.css" rel="stylesheet">
+    <!-- Hotjar Tracking Code for https://square-eyes.netlify.app/ -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2267122,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </head>
 
-  <body class="black-background">
+  <body>
+    <header class="small-header">
+      <div class="small-header-wrap">
+        <a href="watch1.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+          <nav class="right-nav">
+           <ul>
+            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+          </ul>
+          </nav>
+      </div>
+     </header>
+
     <main>
       <a href="../films.html">
         <div class="back-icon">
