--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -22,7 +22,7 @@
 </script>
   </head>
 
-  <body>
+  <body class="watch1-body">
     <header class="small-header">
       <div class="small-header-wrap">
         <a href="watch1.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
@@ -35,43 +35,25 @@
      </header>
 
     <main>
-      <a href="../films.html">
-        <div class="back-icon">
-          <i class="fas fa-chevron-left" style="font-size: 30px"></i>
+      <section class="watch1">
+      <div class="filmCard" id="filmCardPurchase">
+        <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
+        <div class="filmCardBody">
+          <h3 class="cardTitle">FILM TITLE</h3>       
+          <p class="priceCircle">3$</p>
+          <p class="cardProducer">From: Producer name</p>
+          <div class="filmInfo">
+          <p class="cardGenre">Drama</p>
+          <p class="cardDate">2019</p>
         </div>
-      </a>
-      <section class="film-section">
-        <a>
-          <img
-            src="../images/film3-big.jpg"
-            alt="Film title"
-            class="film-big"
-          />
-          <div class="play-icon">
-            <i class="far fa-play-circle"></i>
-          </div>
-        </a>
-        <h2>Film title</h2>
-        <a href="../producer-profile.html">
-          <h3>From: Producer name</h3>
-        </a>
-        <p
-          >Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe
-          liatque porepera dolorporum que del et est et que et anis cum nos
-          volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem.
-        </p>
-        <p
-          >Ita quia cori dolore plicide pore con ni ommolorrum quae optatent
-          quam dolorum facea sequam nam facipsum quo bearchi citiunt esendae vel
-          minus sunt, nit eatqui num estiisi nctios por mi, que</p
-        >
-        <p
-          >volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim
-          hitatibus</p
-        >
-        <div class="watch-button">
+          <p class="cardSummary">Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe
+            liatque porepera dolorporum que del et est et que et anis cum nos
+            volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem.</p>
+        </div>
+         <div class="watch-button">
           <a class="button1">Watch</a>
-        </div>
+        </div>       
+      </div>
       </section>
     </main>
   </body>
