--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <div class="content-wrap">
         <h2>Film-lover?</h2>
           <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
+          <p>No monthly charges. Only 2$ per film. </p>
             <div class="index-button">
               <a href="films.html" class="button1">Explore our films</a>
             </div>
@@ -62,10 +63,32 @@
     </section>
 
     <section class="index-section3">
-      <div class="content-wrap">
-        <i class="fas fa-film"></i>
-          <h3>Pay-per-watch</h3>
-            <p>No monthly charges. Only 2$ per film. </p>
+            <h2 class="films-h2">New Releases</h2>
+              <div class="new-releases">
+                
+                <div class="filmCard" id="filmCardBig">
+                  <a href="/watch/watch1.html">
+                  <img src="images/film7-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
+                    <p class="cardTitle">FILM TITLE</p>       
+                    <p class="cardProducer">From: Producer name</p>
+                  </a>
+                </div>
+
+                  <div class="filmCard" id="filmCardBig">
+                  <a href="/watch/watch1.html">
+                    <img src="images/film1-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
+                      <p class="cardTitle">FILM TITLE</p>       
+                      <p class="cardProducer">From: Producer name</p>
+                    </a>
+                  </div>
+
+                    <div class="filmCard" id="filmCardBig">
+                    <a href="/watch/watch1.html">
+                      <img src="images/film9-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
+                        <p class="cardTitle">FILM TITLE</p>       
+                        <p class="cardProducer">From: Producer name</p>
+                      </a>
+                    </div>
       </div>
     </section>
 
