--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -34,9 +34,15 @@
       </div>
      </header>
 
-    <main>
-      <section class="watch1">
-      <div class="filmCard" id="filmCardPurchase">
+    <main id="watch1">
+      <a href="../films.html">
+        <div class="back-icon">
+          <i class="fas fa-chevron-left" style="font-size: 30px"></i>
+        </div>
+      </a>
+      
+      <section >
+      <div class="filmCard" id="filmCardWatch">
         <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
         <div class="filmCardBody">
           <h3 class="cardTitle">FILM TITLE</h3>       
@@ -51,7 +57,7 @@
             volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem.</p>
         </div>
          <div class="watch-button">
-          <a class="button1">Watch</a>
+          <a href="watch2.html" class="button1">Watch</a>
         </div>       
       </div>
       </section>
