--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     </section>
 
     <section class="index-section3">
-            <h2 class="films-h2">New Releases</h2>
-              <div class="new-releases">
-                
+            <h2>New Releases</h2>
+               
+            <div class="newReleases">
                 <div class="filmCard" id="filmCardBig">
                   <a href="/watch/watch1.html">
                   <img src="images/film7-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
@@ -89,7 +89,7 @@
                         <p class="cardProducer">From: Producer name</p>
                       </a>
                     </div>
-      </div>
+                  </div>
     </section>
 
     <section class="index-section4">
