--- a/create-account/create-account.html
+++ b/create-account/create-account.html
@@ -8,7 +8,7 @@
     <title>SquareEyes | Create an account</title>
     <meta name="description" content="Are you a producer or a watcher? Choose which account you want, and start you journey inside the Square Eyes community.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/styles.css" rel="stylesheet">
+    <link href="/styles/styles.css" rel="stylesheet">
   </head>
 
 <body>
@@ -54,7 +54,7 @@
             </div>
             
             <div class="create-account-button">
-              <a href="create-producer-account/producer-personal.html" class="button1">Make producer account</a>
+              <a href="create-producer.html" class="button1">Make producer account</a>
             </div>
         </section>
 
@@ -82,7 +82,7 @@
             </div>
             
             <div class="create-account-button">
-              <a href="/create-watcher-account/watcher-personal.html" class="button1">Make watcher account</a>
+              <a href="create-watcher.html" class="button1">Make watcher account</a>
             </div>
         </section>
       </div>
