--- a/login.html
+++ b/login.html
@@ -49,15 +49,18 @@
             <form action="submit.php" method="GET">
               <fieldset class="login-fieldset">
                 <label for="e-mail">E-mail:</label>
-                  <input type="text" name="e-mail" class="login-input" required>
+                  <input type="text" name="e-mail" class="login-input id="email" required>
+                  <div class="form-error" id="emailError">Please enter a valid email address</div>
                 <label for="password">Password</label>
                   <input type="text" name="password" class="login-input" required>
+
               </fieldset>
                   <input type="submit" value="Sign in" class="button1">
             </form>
             <p>Not a member?</p>
-            <p class="not-a-member">Create an account<a href="create-account.html">here</a></p>
+            <p class="not-a-member">Create an account<a href="/create-account/create-account.html">here</a></p>
       </main>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
