--- a/create-account/create-producer.html
+++ b/create-account/create-producer.html
@@ -319,7 +319,7 @@
 
                       <label for="password">Choose your password</label>
                   <input type="text" name="password" class="form__input" id="password"></p>
-                  <div class="form-error" id="passwordError">Password must contain: 1 lowercase letter, 1 uppercase letter, 1 number, and be at least 8 characters long</div>
+                  <div class="form-error" id="passwordError">Password must contain 8 characters</div>
                       
                   <button class="purchase-button">
                     Sign up
