--- a/create-account/create-account.html
+++ b/create-account/create-account.html
@@ -14,7 +14,7 @@
 <body>
   <header class="small-header">
     <div class="small-header-wrap">
-      <a href="index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+      <a href="/index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
         <nav class="right-nav">
          <ul>
           <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
@@ -30,7 +30,7 @@
           </section>
 
       <div class="flex-content">
-        <section class="create-account-section">
+        <section class="create-account-section" id="producerCreate">
           <h2>Producer</h2>
             <div class="create-account-checklist">
               <div class="check-icon">
