--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <h4>Are you a producer?</h4>
             <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
               <div class="index-button">
-                <a href="create-account.html" class="button2">Create an account</a>
+                <a href="create-account/create-account.html" class="button2">Create an account</a>
               </div>
         </div>
       </section>
