--- a/watch/watch2.html
+++ b/watch/watch2.html
@@ -41,7 +41,7 @@
         </div>
       </a>
 
-    <div class="purchaseFlex">
+    <div class="purchaseFlex" id="purchaseHide">
     
       <div class="filmCard" id="filmCardPurchase">
       <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
@@ -355,7 +355,15 @@
               </form>
             </section>
           </div>
-          </div>      
+          </div>   
+          
+          <section class="success-section">
+            <div class="check-icon-big"><i class="fas fa-check"></i></div>
+              <h1>Thank you for your purchase. Enjoy your film!</h1>
+                <div>
+                  <a href="/index.html" class="button1">Watch</a>
+                </div>
+          </section>
       </main>
       <script src="/js/script.js"></script>
   </body>
