--- a/producers.html
+++ b/producers.html
@@ -62,7 +62,7 @@
           <p class="h1-subtext">Explore independent producers and watch their high quality films</p>
             <div class="h1-subtext2">
               <p class="small-paragraph">Are you are producer yourself?</p>
-                <a href="create-account.html" class="hydralink">Join us now!</a>
+                <a href="/create-account/create-account.html" class="hydralink">Join us now!</a>
             </div>
       </div>
     </section>
