--- a/films.html
+++ b/films.html
@@ -107,7 +107,7 @@
             </a>
           </div>
 
-          <div class="filmCard">
+          <div class="filmCard hide">
             <a href="/watch/watch1.html">
             <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
               <h3 class="cardTitle">FILM TITLE</h3>       
@@ -151,7 +151,7 @@
                 </a>
               </div>
     
-              <div class="filmCard">
+              <div class="filmCard hide">
                 <a href="/watch/watch1.html">
                 <img src="/images/film8.jpg" class="filmImage" alt="Film Title by Producer-name">
                   <h3 class="cardTitle">FILM TITLE</h3>       
@@ -196,7 +196,7 @@
                 </a>
               </div>
     
-              <div class="filmCard">
+              <div class="filmCard hide">
                 <a href="/watch/watch1.html">
                 <img src="/images/film1.jpg" class="filmImage" alt="Film Title by Producer-name">
                   <h3 class="cardTitle">FILM TITLE</h3>       
