--- a/create-account/create-watcher.html
+++ b/create-account/create-watcher.html
@@ -335,6 +335,12 @@
                 <input type="text" name="password" class="form__input" id="password"></p>
                 <div class="form-error" id="passwordError">Password must contain 8 characters</div>
           </div>
+
+          <div class="formSpacing">
+            <label>
+              <input type="checkbox" checked="checked" name="subscribe"> Send me newsletters
+            </label>
+      </div>
                     
                 <button class="purchase-button">
                   Sign up
