--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -25,7 +25,7 @@
   <body class="watch1-body">
     <header class="small-header">
       <div class="small-header-wrap">
-        <a href="watch1.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+        <a href="/index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
            <ul>
             <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
