called products on wc api

--- a/index.html
+++ b/index.html
@@ -64,32 +64,10 @@
 
     <section class="index-section3">
             <h2>New Releases</h2>
-               
+
             <div class="newReleases">
-                <div class="filmCard" id="filmCardBig">
-                  <a href="/watch/watch1.html">
-                  <img src="images/film7-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
-                    <p class="cardTitle">FILM TITLE</p>       
-                    <p class="cardProducer">From: Producer name</p>
-                  </a>
-                </div>
-
-                  <div class="filmCard" id="filmCardBig">
-                  <a href="/watch/watch1.html">
-                    <img src="images/film1-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
-                      <p class="cardTitle">FILM TITLE</p>       
-                      <p class="cardProducer">From: Producer name</p>
-                    </a>
-                  </div>
-
-                    <div class="filmCard" id="filmCardBig">
-                    <a href="/watch/watch1.html">
-                      <img src="images/film9-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
-                        <p class="cardTitle">FILM TITLE</p>       
-                        <p class="cardProducer">From: Producer name</p>
-                      </a>
-                    </div>
-                  </div>
+              <div class="loader"></div>
+            </div>
     </section>
 
     <section class="index-section4">
@@ -124,5 +102,9 @@
         </section>
       </div>
     </footer>
+
+    <script src="js/components/error.js"></script>
+    <script src="js/index.js"></script>
+
   </body>
 </html>
