--- a/watch/watch2.html
+++ b/watch/watch2.html
@@ -43,21 +43,9 @@
 
     <div class="purchaseFlex" id="purchaseHide">
     
-      <div class="filmCard" id="filmCardPurchase">
-      <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
-      <div class="filmCardBody">
-        <h3 class="cardTitle">FILM TITLE</h3>       
-        <p class="priceCircle">2$</p>
-        <p class="cardProducer">From: Producer name</p>
-        <div class="filmInfo">
-        <p class="cardGenre">Drama</p>
-        <p class="cardDate">2019</p>
-      </div>
-        <p class="cardSummary">Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe
-          liatque porepera dolorporum que del et est et que et anis cum nos
-          volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem.</p>
-      </div>
-    </div>
+      <div class="film-details" id="filmCardPurchase">
+        <div class="loader"></div>
+    </div>    
 
     <div class="purchaseContainer">
         <section class="purchaseHeading">
@@ -364,6 +352,8 @@
           </section>
       </main>
       <script src="/js/script.js"></script>
+      <script src="/js/film-details.js"></script>
+      <script src="/js/components/error.js"></script>
   </body>
 </html>
 
