--- a/watch/watch1.html
+++ b/watch/watch1.html
@@ -41,26 +41,12 @@
         </div>
       </a>
 
-      <section >
-      <div class="filmCard" id="filmCardWatch">
-        <img src="/images/film3.jpg" class="filmImage" alt="Film Title by Producer-name">
-        <div class="filmCardBody">
-          <h3 class="cardTitle">FILM TITLE</h3>       
-          <p class="priceCircle">2$</p>
-          <p class="cardProducer">From: Producer name</p>
-          <div class="filmInfo">
-          <p class="cardGenre">Drama</p>
-          <p class="cardDate">2019</p>
-        </div>
-          <p class="cardSummary">Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe
-            liatque porepera dolorporum que del et est et que et anis cum nos
-            volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem.</p>
-        </div>
-         <div class="watch-button">
-          <a href="watch2.html" class="button1">Watch</a>
-        </div>       
-      </div>
-      </section>
+      <div class="film-details">
+        <div class="loader"></div>
+    </div>    
     </main>
+
+    <script src="/js/components/error.js"></script>
+    <script src="/js/film-details.js"></script>
   </body>
 </html>
