--- a/producer-profile.html
+++ b/producer-profile.html
@@ -65,35 +65,12 @@
       <div class="producer-profile-grid">
         <section class="producer-section">
           <img src="images/producer1.jpg" alt="Profile picture" class="profile-picture">
-            <h1>Name Surname</h1>
+            <h1>Thomas Lewis</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisifwcing elit, sed do eiusmod tempor incididunt ut.</p>
         </section>
 
         <section class="film-section">
-          <a href="/watch/watch1.html">
-            <img src="images/film1-big.jpg" alt="Film title" class="film-big">
-              <div class="play-icon">
-                <i class="far fa-play-circle"></i>
-              </div>
-              <h2>Film title</h2></a>
-                <h3>From: Producer name</h3>
-                  <p>Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe liatque porepera dolorporum que del et est et que et anis cum nos volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem. </p>
-                  <p>Ita quia cori dolore plicide pore con ni ommolorrum quae optatent quam dolorum facea sequam nam facipsum quo bearchi citiunt esendae vel minus sunt, nit eatqui num estiisi nctios por mi, que</p> 
-                  <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
-          </section>
-
-        <section class="film-section">
-          <a href="/watch/watch1.html">
-            <img src="images/film3-big.jpg" alt="Film title" class="film-big">
-              <div class="play-icon">
-                <i class="far fa-play-circle"></i>
-              </div>
-                <h2>Film title</h2>
-          </a>
-          <h3>From: Producer name</h3>
-            <p>Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe liatque porepera dolorporum que del et est et que et anis cum nos volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem. </p>
-            <p>Ita quia cori dolore plicide pore con ni ommolorrum quae optatent quam dolorum facea sequam nam facipsum quo bearchi citiunt esendae vel minus sunt, nit eatqui num estiisi nctios por mi, que</p> 
-            <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
+          <div class="loader"></div>
         </section>
       </div>
     </main>
@@ -120,5 +97,7 @@
         </section>
       </div>
     </footer>
+    <script src="js/components/error.js"></script>
+    <script src="js/producer.js"></script>
   </body>
 </html>
