--- a/films.html
+++ b/films.html
@@ -51,48 +51,35 @@
      
       <div class="films-grid">
         <section class="new-releases-section">
-          <div class="content-wrap">
             <h2 class="films-h2">New Releases</h2>
-              <div class="new-releases">
-                <div class="arrow-icon">
-                  <i class="fas fa-chevron-left"></i>
+                  <div class="featured">
+                    <div class="loader"></div>
                 </div>
-
-                <div class="filmCard" id="filmCardBig">
-                  <a href="/watch/watch1.html">
-                  <img src="/images//film7-big.jpg" id="filmImageBig" alt="Film Title by Producer-name">
-                    <h3 class="cardTitle">FILM TITLE</h3>       
-                    <p class="cardProducer">From: Producer name</p>
-                  </a>
-                </div>
-
-                    <div class="arrow-icon">
-                      <i class="fas fa-chevron-right"></i>
-                    </div>
-              </div>
-          </div>
-        </section>
-
-        <section class="circle-section">
-          <div class="active-circle">
-            <i class="fas fa-circle"></i>
-          </div>
-          <div class="circle">  
-            <i class="fas fa-circle"></i>
-          </div>
-          <div class="circle">  
-            <i class="fas fa-circle"></i>
-          </div>
         </section>
 
         <section class="drama-section">
-          <h2 class="films-h2">Films</h2>
+          <h2 class="films-h2">Drama</h2>
           <div class="drama">
-            <div class="results">
+            <div class="dramaResults">
               <div class="loader"></div>
           </div> 
-          </div>
         </section>
+
+        <section class="drama-section">
+          <h2 class="films-h2">Action</h2>
+        <div class="actionResults">
+            <div class="loader"></div>
+        </div> 
+        </section>
+
+        <section class="drama-section">
+          <h2 class="films-h2">Documentary</h2>
+        <div class="documentaryResults">
+          <div class="loader"></div>
+      </div> 
+      </section>
+
+          </div>
       </div>
     </main>
 
