--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="index-section3">
             <h2>New Releases</h2>
 
-            <div class="newReleases">
+            <div class="featured">
               <div class="loader"></div>
             </div>
     </section>
@@ -104,7 +104,7 @@
     </footer>
 
     <script src="js/components/error.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/films.js"></script>
 
   </body>
 </html>
