--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
     <meta name="description" content="Square Eyes is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/index.css" rel="stylesheet">
-    <!-- Hotjar Tracking Code for https://square-eyes.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2267122,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
   </head>
   
   <body>
@@ -103,8 +92,8 @@
       </div>
     </footer>
 
-    <script src="js/components/error.js"></script>
-    <script src="js/films.js"></script>
+    <script src="./js/components/error.js"></script>
+    <script src="./js/index.js"></script>
 
   </body>
 </html>
