--- a/watch/watch2.html
+++ b/watch/watch2.html
@@ -5,21 +5,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-    <title>SquareEyes | Credit Card</title>
-    <meta name="description" content="Add your creditcard information for faster and easier payment when you find a film.">
+    <title class="film-title"></title>
+    <meta name="description" content="Fill out the form and to watch the movie.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../styles/styles.css" rel="stylesheet">
-    <!-- Hotjar Tracking Code for https://square-eyes.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2267122,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
   </head>
 
   <body>
